[package]
name = "lunar"
version = "0.1.0"
edition = "2024"


[dependencies]
godot = { workspace = true }
paste = { workspace = true }
parking_lot = { workspace = true }
lunar_macro = { path = "../lunar_macro" }
either = { workspace = true }
replace_with = { workspace = true }
slotmap = { workspace = true }
ahash = { workspace = true }
